# demo-rust-axum

./: .gitignore  CITATION.cff  Cargo.toml  Makefile  README.md  cspell.json  demo-rust-axum-by-joel-parker-henderson.epub  demo-rust-axum-by-joel-parker-henderson.md  demo-rust-axum-by-joelparkerhenderson.epub
doc/: 00-introduction.md  01-what-is-this.md  02-what-is-axum.md  03-what-is-tower.md  04-what-is-hyper.md  05-what-is-tokio.md  06-what-is-serde.md  97-axum-repository-examples.md  98-ideas-for-next-steps.md  conclusion.md  introduction.md  what-is-axum.md  what-is-hyper.md  what-is-serde.md  what-is-this.md  what-is-tokio.md  what-is-tower.md
examples/axum-bind-host-port-socket-address/: Cargo.toml
examples/axum-bind-host-port-socket-address/src/: main.rs
examples/axum-count-handler-function/: Cargo.toml  README.md
examples/axum-count-handler-function/src/: main.rs
examples/axum-epoch-handler-function/: Cargo.toml  README.md
examples/axum-epoch-handler-function/src/: main.rs
examples/axum-extract-json/: Cargo.toml  README.md
examples/axum-extract-json-parameters/: Cargo.toml  README.md
examples/axum-extract-json-parameters/src/: main.rs
examples/axum-extract-json/src/: main.rs
examples/axum-extract-path/: Cargo.toml  README.md
examples/axum-extract-path-parameters/: Cargo.toml  README.md
examples/axum-extract-path-parameters/src/: main.rs
examples/axum-extract-path/src/: main.rs
examples/axum-extract-query/: Cargo.toml  README.md
examples/axum-extract-query-parameters/: Cargo.toml  README.md
examples/axum-extract-query-parameters/src/: main.rs
examples/axum-extract-query/src/: main.rs
examples/axum-graceful-shutdown/: Cargo.toml  README.md
examples/axum-graceful-shutdown/src/: main.rs
examples/axum-hello-handler-function/: Cargo.toml  README.md
examples/axum-hello-handler-function/src/: main.rs
examples/axum-hello-world/: Cargo.toml  README.md
examples/axum-hello-world-with-an-axum-test-server/: Cargo.toml  README.md
examples/axum-hello-world-with-an-axum-test-server/src/: main.rs
examples/axum-hello-world-with-app-function/: Cargo.toml  README.md
examples/axum-hello-world-with-app-function/src/: main.rs
examples/axum-hello-world-with-handler-function/: Cargo.toml  README.md
examples/axum-hello-world-with-handler-function/src/: main.rs
examples/axum-hello-world/src/: main.rs
examples/axum-html-form-get-and-post/: Cargo.toml  README.md
examples/axum-html-form-get-and-post/src/: book.rs  main.rs
examples/axum-http-header-content-type/: Cargo.toml  README.md
examples/axum-http-header-content-type/src/: main.rs
examples/axum-respond-to-multiple-http-verbs/: Cargo.toml
examples/axum-respond-to-multiple-http-verbs/src/: main.rs
examples/axum-respond-with-a-custom-header-and-a-custom-image/: Cargo.toml  README.md
examples/axum-respond-with-a-custom-header-and-a-custom-image/src/: main.rs
examples/axum-respond-with-a-file-of-html/: Cargo.toml  README.md
examples/axum-respond-with-a-file-of-html/src/: file.html  main.rs
examples/axum-respond-with-a-json-payload/: Cargo.toml  README.md
examples/axum-respond-with-a-json-payload/src/: main.rs
examples/axum-respond-with-a-string-of-html/: Cargo.toml  README.md
examples/axum-respond-with-a-string-of-html/src/: main.rs
examples/axum-respond-with-http-status-code-ok/: Cargo.toml  README.md
examples/axum-respond-with-http-status-code-ok/src/: main.rs
examples/axum-respond-with-the-request-uri/: Cargo.toml  README.md
examples/axum-respond-with-the-request-uri/src/: main.rs
examples/axum-restful-routes-and-resources/: Cargo.toml
examples/axum-restful-routes-and-resources-with-html/: Cargo.toml  README.md
examples/axum-restful-routes-and-resources-with-html/src/: book.rs  book_change.rs  data.rs  main.rs
examples/axum-restful-routes-and-resources-with-json/: Cargo.toml  README.md
examples/axum-restful-routes-and-resources-with-json/src/: data.rs  main.rs
examples/axum-router-fallback/: Cargo.toml  README.md
examples/axum-test-server/: Cargo.toml  README.md
examples/axum-tracing-subscriber/: Cargo.toml  README.md
examples/axum-uptime-handler-function/: Cargo.toml
examples/bind-host-port-socket-address/: Cargo.toml  README.md
examples/count-handler-function/: Cargo.toml  README.md
examples/epoch-handler-function/: Cargo.toml  README.md
examples/extract-json/: README.md
examples/extract-json-parameters/: Cargo.toml
examples/extract-json-payload/: Cargo.toml
examples/extract-path-parameters/: Cargo.toml  README.md
examples/extract-query-parameters/: Cargo.toml  README.md
examples/graceful-shutdown/: Cargo.toml  README.md
examples/handler-function/: Cargo.toml  README.md
examples/hello-handler-function/: Cargo.toml
examples/hello-world/: Cargo.toml  README.md  main.rs
examples/html-form-get-and-post/: Cargo.toml  README.md
examples/html-form-get-and-post/src/: book.rs  main.rs
examples/http-status-code/: Cargo.toml  README.md
examples/http-status-code/src/: main.rs
examples/http-verbs-and-handlers/: Cargo.toml  README.md
examples/http-verbs-and-handlers/src/: main.rs
examples/respond-with-custom-header-and-custom-image/: Cargo.toml  README.md
examples/respond-with-file-of-html/: Cargo.toml  README.md
examples/respond-with-html-file/: Cargo.toml  README.md
examples/respond-with-http-status-code/: Cargo.toml
examples/respond-with-json/: Cargo.toml
examples/respond-with-request-uri/: Cargo.toml
examples/respond-with-string-of-HTML/: README.md
examples/respond-with-string-of-html/: Cargo.toml
examples/restful-routes-and-resources/: Cargo.toml  README.md
examples/restful-routes-and-resources/src/: book.rs  book_patch.rs  main.rs
examples/router-fallback/: Cargo.toml  README.md
examples/status-handler-function/: Cargo.toml  README.md
examples/tracing-subscriber/: Cargo.toml
examples/tracing-subscriber/src/: main.rs
examples/uptime-handler-function/: Cargo.toml  README.md
src/: app.rs  book.rs  data.rs  file.html  hello.html  main.rs
todo/: notes.md  realworld.md
(+18 files in other folders)
