[package]
name = "demo-rust-axum"
version = "2.0.0"
edition = "2024"
authors = ["Joel Parker Henderson <joel@joelparkerhenderson.com>"]
license = "GPL-2.0 OR GPL-3.0"
homepage = "https://github.com/joelparkerhenderson/demo-rust-axum"
repository = "https://github.com/joelparkerhenderson/demo-rust-axum"
documentation = "https://github.com/joelparkerhenderson/demo-rust-axum"

description = """
Demo of Rust and Axum
"""

readme = "README.md"
keywords = ["demo", "rust", "axum", "web"]
categories = ["web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "~0.8.4" } # Web framework that focuses on ergonomics and modularity.
hyper = { version = "~1.6.0", features = ["full"] } # A fast and correct HTTP library.
tokio = { version = "~1.45.1", features = ["full"] } # Event-driven, non-blocking I/O platform.
tower = { version =  "~0.5.2" } # Modular reusable components for building robust clients and servers.
serde = { version = "~1.0.219", features = ["derive"] } # A serialization/deserialization framework.
serde_json = { version = "~1.0.140" } # Serde serialization/deserialization of JSON data.
base64 = { version = "~0.22.1" } # Encode and decode base64 as bytes or utf8.
http = { version = "~1.3.1" } # Types for HTTP requests and responses.
tracing = { version = "~0.1.41" } #  Application-level tracing for Rust.
tracing-subscriber = { version = "~0.3.19", features = ["env-filter"] } # Utilities for `tracing` subscribers.

[[example]]
name = "axum-hello-world"
path = "examples/axum-hello-world/src/main.rs"
