[package]
name = "demo-rust-axum-examples-axum-hello-world"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.0" } # Web framework that focuses on ergonomics and modularity.
tokio = { version = "1.22.0", features = ["full"] } # Event-driven, non-blocking I/O platform.
