[package]
name = "demo-rust-axum-examples-axum-respond-with-http-status-code-ok"
version = "2.0.0"
edition = "2024"
authors = ["Joel Parker Henderson <joel@joelparkerhenderson.com>"]
license = "GPL-2.0 OR GPL-3.0"
homepage = "https://github.com/joelparkerhenderson/demo-rust-axum"
repository = "https://github.com/joelparkerhenderson/demo-rust-axum"
documentation = "https://github.com/joelparkerhenderson/demo-rust-axum"

description = """
Demo of Rust and Axum / examples / axum-http-status-code
"""

readme = "README.md"
keywords = ["demo", "rust", "axum", "web"]
categories = ["web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "~0.8.4" } # Web framework that focuses on ergonomics and modularity.
tokio = { version = "~1.45.1", features = ["full"] } # Event-driven, non-blocking I/O platform.

[dev-dependencies]
axum-test = { version = "17.3.0" } # Library for writing tests for web servers written using Axum.
