[package]
name = "demo-rust-axum-examples-http-verbs-and-handlers"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.8" # Web framework that focuses on ergonomics and modularity.
tokio = { version = "1.17.0", features = ["full"] } # Event-driven, non-blocking I/O platform.
