[package]
name = "demo-rust-axum-examples-http-verbs-and-handlers"
version = "1.3.0"
edition = "2021"
authors = ["Joel Parker Henderson <joel@joelparkerhenderson.com>"]
license = "GPL-2.0 OR GPL-3.0"
homepage = "https://github.com/joelparkerhenderson/demo-rust-axum"
repository = "https://github.com/joelparkerhenderson/demo-rust-axum"
documentation = "https://github.com/joelparkerhenderson/demo-rust-axum"

description = """
Demo of Rust and Axum + examples http-verbs-and-handlers
"""

readme = "README.md"
keywords = ["demo", "rust", "axum", "web"]
categories = ["web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "~0.7.1" } # Web framework that focuses on ergonomics and modularity.
tokio = { version = "~1.34.0", features = ["full"] } # Event-driven, non-blocking I/O platform.
