[package]
name = "demo-rust-axum-restful-routes-and-resources"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.8" # Web framework that focuses on ergonomics and modularity.
tokio = { version = "1.17.0", features = ["full"] } # Event-driven, non-blocking I/O platform.
serde = { version = "1.0.136", features = ["derive"] } # A serialization/deserialization framework.
serde_json = "1.0.79" # Serde serializion/deserialization of JSON data.
once_cell = "1.10.0" # Single assignment cells and lazy values.
base64 = "0.13" # Encode and decode base64 as bytes or utf8.
http = "0.2.6" # Types for HTTP requests and responses.
