[package]
name = "demo-rust-axum-examples-restful-routes-and-resources"
version = "1.3.0"
edition = "2021"
authors = ["Joel Parker Henderson <joel@joelparkerhenderson.com>"]
license = "GPL-2.0 OR GPL-3.0"
homepage = "https://github.com/joelparkerhenderson/demo-rust-axum"
repository = "https://github.com/joelparkerhenderson/demo-rust-axum"
documentation = "https://github.com/joelparkerhenderson/demo-rust-axum"

description = """
Demo of Rust and Axum + examples restful-routes-and-resources
"""

readme = "README.md"
keywords = ["demo", "rust", "axum", "web"]
categories = ["web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "~0.7.1" } # Web framework that focuses on ergonomics and modularity.
tokio = { version = "~1.34.0", features = ["full"] } # Event-driven, non-blocking I/O platform.
serde = { version = "~1.0.193", features = ["derive"] } # A serialization/deserialization framework.
serde_json = "~1.0.108" # Serde serializion/deserialization of JSON data.
once_cell = "~1.18.0" # Single assignment cells and lazy values.
base64 = "~0.21.5" # Encode and decode base64 as bytes or utf8.
http = "~1.0.0" # Types for HTTP requests and responses.
